# sketchpy

./: .gitignore  CHANGELOG.md  CLAUDE.md  DECISIONS.md  LICENSE  PROJECT_STATE.md  README.md  TODO.md  eslint.config.js  localhost.pem  main.py  package-lock.json  package.json  pyproject.toml  vitest.config.js
.claude/: settings.json
.claude/commands/: ship.md
.claude/skills/auto-commit-push/: SKILL.md
.claude/skills/lesson-generator/: skill.md
.claude/skills/project-documentation-tracker/: SKILL.md  skill.md
.github/workflows/: deploy-pages.yml  sync-to-drive.yml  test.yml
examples/: README.md  convex_blobs_demo.py  house.mo.py  math_doodling_demo.py  ocean_primitives.py  ocean_scene.py  octopus_variations.py  organic_shapes_demo.py  simple_shapes.py
examples/__marimo__/session/: house.mo.py.json
lessons/: lessons.yaml
lessons/01-first-flower/: help.md  lesson.md  starter.py
lessons/02-colorful-garden/: lesson.md  starter.py
lessons/03-geometric-patterns/: help.md  lesson.md  starter.py
lessons/04-strings-and-text/: help.md  lesson.md  starter.py
lessons/05-boolean-conditionals/: help.md  starter.py
lessons/06-for-loops/: help.md  lesson.md  starter.py
lessons/07-lists/: help.md  lesson.md  starter.py
lessons/08-nested-loops/: help.md  lesson.md  starter.py
lessons/09-while-loops/: help.md  lesson.md  starter.py
lessons/10-compound-conditions/: help.md  lesson.md  starter.py
lessons/11-basic-functions/: help.md  lesson.md  starter.py
lessons/12-function-parameters/: help.md  lesson.md  starter.py
lessons/13-return-values/: help.md  starter.py
lessons/14-lists-and-functions/: help.md  lesson.md  starter.py
lessons/15-final-project/: help.md  lesson.md  starter.py
plans/: alpine.md  cache-busting.md  curves.md  curvy-cars-theme.md  errors.md  helper-gradients.md  js-tooling.md  ocean-shapes.md  security.md  sharing.md  testing.md
plans/done/: alpine-overview.md  alpine-phase-0.md  alpine-phase-1.md  alpine-phase-2.md  alpine-phase-3.md  alpine-phase-4.md  errors.md  gradients.md  lessons.md  pyodide.md
scripts/: __init__.py  build.py  convert_starters.py  srv.py  sync_to_drive.py  update_starter_endings.py
sketchpy/: __init__.py  canvas.py  palettes.py  shapes.py  utils.py
sketchpy/helpers/: __init__.py  cars.py  ocean.py
snippets/: calm_waves.py  geometric_harmony.py  sunset_garden.py
sources/: autocomplete-api-updates.md  flowers.md  math-doodling-summary.md  math-doodling.md  math-module-implementation.md  python-concepts-theme-1.md  style.md  theme-3-creation-summary.md
static/js/: app.dev.js  app.js  errorHandler.dev.js  pyodide-worker.dev.js  pyodide-worker.js
static/js/core/: apiDefinitions.dev.js  apiDefinitions.js  editorSetup.dev.js  editorSetup.js  lessonState.dev.js  lessonState.js
static/js/security/: config.dev.js  config.js  executor.dev.js  executor.js  validator.dev.js  validator.js
templates/: index.html  index.html.jinja  lesson.html.jinja
templates/components/: output-tabs.html  sidebar.html
tests/: __init__.py  conftest.py  test_autocomplete.py  test_browser.py  test_build.py  test_canvas.py  test_car_shapes.py  test_error_handling.py  test_gradients.py  test_lessons.py  test_ocean_shapes.py  test_palettes.py  test_server.py  test_snippets.py  test_utils.py  test_worker.py
tests/js/: apiDefinitions.test.js  canvasApi.test.js  domElements.test.js  errorHandler.test.js
themes/: README.md
themes/theme-1/: theme.yaml
themes/theme-1/01-first-flower/: lesson.md  starter.py
themes/theme-1/02-colorful-garden/: help.md  starter.py
themes/theme-1/03-geometric-patterns/: starter.py
themes/theme-1/04-strings-and-text/: starter.py
themes/theme-1/05-boolean-conditionals/: help.md  lesson.md  starter.py
themes/theme-1/06-for-loops/: help.md  starter.py
themes/theme-1/07-lists/: lesson.md  starter.py
themes/theme-1/08-nested-loops/: starter.py
themes/theme-1/09-while-loops/: help.md  starter.py
themes/theme-1/10-compound-conditions/: starter.py
themes/theme-1/11-basic-functions/: starter.py
themes/theme-1/12-function-parameters/: starter.py
themes/theme-1/13-return-values/: help.md  lesson.md  starter.py
themes/theme-1/14-lists-and-functions/: starter.py
themes/theme-1/15-final-project/: starter.py
themes/theme-2/: theme.yaml
themes/theme-2/01-first-flower/: help.md  lesson.md  starter.py
themes/theme-2/02-colorful-garden/: help.md  lesson.md  starter.py
themes/theme-2/03-geometric-patterns/: help.md  lesson.md  starter.py
themes/theme-2/04-strings-and-text/: help.md  lesson.md  starter.py
themes/theme-2/05-boolean-conditionals/: help.md  lesson.md  (+1 more)
themes/theme-3/: theme.yaml
themes/theme-4/: theme.yaml
themes/theme-5/: theme.yaml
turtles/: index.html  shapes.py  srv.py
(+101 files in other folders)
