[project]
name = "sketchpy"
version = "0.1.0"
description = "Educational Python graphics library for teaching programming through visual art"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "colabturtleplus>=2.0.1",
    "jinja2>=3.1.6",
    "marimo>=0.17.2",
    "markdown>=3.9",
    "pyyaml>=6.0.3",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
srv = "scripts.srv:main"
build = "scripts.build:main"
test = "pytest:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["sketchpy", "scripts"]

[dependency-groups]
dev = [
    "playwright>=1.55.0",
    "pytest>=8.4.2",
]
