[project]
name = "sketchpy"
version = "0.1.0"
description = "Educational Python graphics library for teaching programming through visual art"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "sketchpy contributors"}
]
keywords = [
    "graphics",
    "education",
    "svg",
    "drawing",
    "teaching",
    "visualization",
    "canvas",
    "shapes",
    "marimo",
    "jupyter",
    "pyodide"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mojzis/sketchpy"
Repository = "https://github.com/mojzis/sketchpy"
Documentation = "https://github.com/mojzis/sketchpy#readme"
Issues = "https://github.com/mojzis/sketchpy/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
srv = "scripts.srv:main"
build = "scripts.build:main"
test = "pytest:main"

[tool.uv]
package = true

[tool.setuptools]
packages = ["sketchpy", "scripts"]

[dependency-groups]
dev = [
    "playwright>=1.55.0",
    "pytest>=8.4.2",
    "poethepoet>=0.37.0",
    "jinja2>=3.1.6",
    "marimo",
    "markdown>=3.9",
    "pyyaml>=6.0.3",
    "watchdog>=6.0.0",
    "ruff>=0.14.2",
    "ty>=0.0.1a24",
    "pymarkdownlnt>=0.9.33",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Default: quiet mode (-q) for minimal output, matching what LLMs see
# Skip browser tests by default (use pytest -m browser to run them)
# Override with: pytest -v (verbose) or pytest --tb=long (detailed tracebacks)
addopts = [
    "-q",
    "--tb=short",
    "--strict-markers",
    "-m", "not browser",
]
markers = [
    "browser: marks tests that require Playwright and a real browser (deselected by default)",
]


[tool.poe.tasks]
# Test commands
test-js = "npm test"
test-py = "pytest"
test = ["test-js", "test-py"]

# Lint commands
lint-js = "npm run lint"
lint-py = "ruff check ."
lint = ["lint-js", "lint-py"]

check = ["lint", "test"]